app/javascript/src/css/default/AccountForm.css
@import "../../variables.css";

.AccountForm {
  margin: 24px auto;
}

.AccountForm .PageBanner {
  margin-bottom: 48px;
}

.AccountFormHeader {
  padding: 16px;
  background: var(--mkt-gold);
}

.AccountForm .Field {
  margin-bottom: 24px;
}

.AccountForm .Field label {
  display: block;
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 8px;
}

.AccountForm .Field.-checkbox label {
  display: inline;
  font-size: 18px;
  font-weight: normal;
}

.AccountForm .Field input[type="email"],
.AccountForm .Field input[type="text"],
.AccountForm .Field input[type="url"],
.AccountForm .Field textarea,
.AccountForm .Field input[type="password"] {
  background: transparent;
  border: 1px solid white;
  color: inherit;
  font-size: 16px;
  padding: 8px;
  max-width: 475px;
  width: 100%;
}

.FieldHint {
  font-size: 14px;
  font-style: italic;
  display: block;
  margin-top: 4px;
}

.AccountFormFooter {
  margin-top: 48px;
}

.AccountFormFooter a {
  display: block;
  color: white;
}

